--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently */,
     "strict": true /* Enable all strict type-checking options. */
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
