--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/Wyatt-SG/epoch-to-human-readable#readme",
   "devDependencies": {
+    "@types/jest": "^29.0.1",
+    "jest": "^29.0.3",
+    "ts-jest": "^29.0.0",
     "typescript": "^4.8.3"
   }
 }
