--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "npx tsc",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint --ext src/**/*.ts",
+    "format": "prettier --write src/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -19,7 +21,12 @@
   "homepage": "https://github.com/Wyatt-SG/epoch-to-human-readable#readme",
   "devDependencies": {
     "@types/jest": "^29.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "eslint": "^8.23.1",
+    "eslint-config-prettier": "^8.5.0",
     "jest": "^29.0.3",
+    "prettier": "^2.7.1",
     "ts-jest": "^29.0.0",
     "typescript": "^4.8.3"
   }
