--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npx tsc",
     "test": "jest",
     "lint": "eslint --ext src/**/*.ts",
-    "format": "prettier --write src/**/*.ts"
+    "format": "prettier --write src/*.ts src/**/*.ts src/**/**/*.ts"
   },
   "repository": {
     "type": "git",
