--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,14 +10,14 @@
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
-
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"],
+    "no-console": 2
   },
-
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "node": true
   }
 }
